--- a/MH4930 Notes/week 7.tex
+++ b/MH4930 Notes/week 7.tex
@@ -3,7 +3,7 @@
     \begin{enumerate}
         \item $I$ is injective.
         \item For any SES $0\to X\xto\alpha Y\xto \beta Z\to 0$, we have SES 
-        \[0 \to \h_R(X,I) \xto{\beta^*} \h_R(Y,I) \xto{\alpha^*} \h_R(X,I) \to 0\]
+        \[0 \to \h_R(Z,I) \xto{\beta^*} \h_R(Y,I) \xto{\alpha^*} \h_R(X,I) \to 0\]
         \item Let $Y$ be a $R$-module. If $I$ is isomorphic to a submodule of $Y$, then the following SES splits:
         \[0 \to I \xhookrightarrow{\iota} Y\xtwoheadrightarrow{\pi} Y/I \to 0\]
         And hence $I\mid Y$. Consequently $Y\cong I \oplus Y/I$.
